# numerical-scripts

./: .gitignore  README.md  exam2-cheat-sheet.tex  final.tex
Homeworks/: CMakeLists.txt
Homeworks/HW1/: Makefile  Workbook.nb  gauss_seidel.cpp  output  program1.cpp
Homeworks/HW10/: CMakeLists.txt  linfindiff.m  nonlinfindiff.m  program10.cpp  writeup.tex
Homeworks/HW10/src/: CMakeLists.txt  Makefile  linearfem.cpp  program10.cpp
Homeworks/HW11/: CMakeLists.txt  Makefile  g.m  poissonFinDiff.m  writeup.tex
Homeworks/HW11/src/: .gitignore  CMakeLists.txt  Makefile  linearcd2D.cpp  program11.cpp
Homeworks/HW12/: backdiff.m  crankn.m  crankn2.m  dx.1.out  dx.2.out  dx.3.out  forwarddiff.m  fwddiff2D.cpp  program12.cpp  program12.out  writeup.tex
Homeworks/HW13/: 1.nb  CMakeLists.txt  b_15.out  b_25.out  contour.pl  ctrdiff2D.cpp  plot.gp  program13.cpp  triangles.tikz  wavediff.m  writeup.tex
Homeworks/HW13/src/: CMakeLists.txt  program13.cpp
Homeworks/HW2/: Makefile  condition.m  conditionNums.m  congrad.m  conjgrad.cpp  miniproj.m  output  program2.cpp  sor.cpp  sor.m
Homeworks/HW3/: contlsq.m  lsexp.m  lspwr.m  lsq.m  number4.m  number4_2.m  number6.m  program3.cpp
Homeworks/HW4/: Makefile  ctriglsq.m  dtriglsq.m  fftlsq.m  miniproj.m  number2.m  number2b.m  number6.m  number6func.m  number7.m  output  output.ps  program4.cpp  triglsq.m
Homeworks/HW5/: Makefile  gramschmidt.m  output  powmtd.m  program5.cpp  sympower.cpp  sympowmtd.m
Homeworks/HW6/: deflate.m  householders.m  invpwr.m  output  powmtd.m  program6.cpp  qr.cpp  qr.m  updated-deflate-output.txt  updated-invpwr-output.txt
Homeworks/HW7/: HW7.nb  fixedpt.m  fixedptgs.m  output  program7.cpp
Homeworks/HW8/: broyden.m  derive.m  descent.cpp  eulers.m  jac.m  jacob.m  output  program8.cpp  rungekutta.m  steepest.m  (+1 more)
(+43 files in other folders)
