cmake_minimum_required(VERSION 2.8)
project (hw10-miniproject)
set (hw10-miniproject-srcs program10.cpp)
include_directories (../../libnumerics)
add_subdirectory (../../libnumerics libnumerics)
add_executable (hw10-miniproject ${hw10-miniproject-srcs})
target_link_libraries (hw10-miniproject numerics)